GOWL-03: LeaguesBOApi first endpoints and apply little fixes to other svs.